--- a/remote.html
+++ b/remote.html
@@ -23,7 +23,6 @@ button:hover { background:#e52a2f; }
 .song-list button:hover { background:#e52a2f; }
 .switch { display:flex; align-items:center; margin-top:10px; }
 .switch input { margin-right:6px; }
-input[type=range] { width:100%; margin-top:5px; accent-color:#ff3b3f; }
 .control-buttons { display:flex; gap:10px; margin-top:15px; }
 .control-buttons button { flex:1; padding:10px; font-weight:bold; }
 </style>
@@ -45,24 +44,18 @@ input[type=range] { width:100%; margin-top:5px; accent-color:#ff3b3f; }
 <div id="right">
   <h2>🎬 Danh sách phát</h2>
   <div class="song-list" id="queue"></div>
-  
-  <div class="control-buttons">
-    <button id="muteBtn">🔇 Tắt/Bật âm thanh</button>
-    <button id="stopBtn">⏹️ Dừng bài / Intro</button>
-  </div>
 
-  <div style="margin-top:15px;">
-    <label>🔊 Âm lượng: </label>
-    <input type="range" min="0" max="100" value="100" id="volumeSlider">
+  <div class="control-buttons">
+    <button id="stopBtn">⏹️ Dừng bài / Intro</button>
   </div>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-import { getDatabase, ref, set, push, onValue, remove, query, orderByKey, limitToFirst } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+import { getDatabase, ref, set, push, onValue, remove } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
 const firebaseConfig = { 
-    apiKey: "AIzaSyC1JW_dg-YChaizarbS-7UUN3njFomMPvI",
+  apiKey: "AIzaSyC1JW_dg-YChaizarbS-7UUN3njFomMPvI",
   authDomain: "karaokeweb-d414b.firebaseapp.com",
   databaseURL: "https://karaokeweb-d414b-default-rtdb.asia-southeast1.firebasedatabase.app",
   projectId: "karaokeweb-d414b",
@@ -82,11 +75,7 @@ const queueRef = ref(db,"queue");
 const listEl = document.getElementById("list");
 const statusEl = document.getElementById("status");
 const queueEl = document.getElementById("queue");
-const muteBtn = document.getElementById("muteBtn");
 const stopBtn = document.getElementById("stopBtn");
-const volumeSlider = document.getElementById("volumeSlider");
-
-let muteState = false;
 
 // Tìm bài
 async function search(){
@@ -107,21 +96,21 @@ async function search(){
       el.className="item";
       el.innerHTML=`<img src="${v.snippet.thumbnails.medium.url}"><div class="title">${v.snippet.title}</div>`;
       const addBtn=document.createElement("button");
-      addBtn.textContent="➕ Thêm bài";
-      addBtn.onclick=()=> addSong(v.id.videoId, v.snippet.title, v.snippet.thumbnails.medium.url);
+      addBtn.textContent="🎵 Phát bài";
+      addBtn.onclick=()=> playSong(v.id.videoId, v.snippet.title);
       el.appendChild(addBtn);
       listEl.appendChild(el);
     });
   }catch(e){ console.error(e); statusEl.textContent="⚠️ Lỗi tìm kiếm"; }
 }
 
-function addSong(id, title, thumb){
-  push(queueRef,{id,title,thumbnail:thumb});
-  // Nếu không đang phát bài nào thì tự động nhảy
+function playSong(id, title){
+  // Thêm vào hàng chờ và phát ngay nếu rảnh
+  push(queueRef,{id,title});
   onValue(commandRef, snapshot=>{
     const cmd = snapshot.val();
-    if(!cmd || !cmd.id){ // không có bài đang phát
-      set(commandRef,{id,title,play:true,mute:muteState});
+    if(!cmd || !cmd.id){
+      set(commandRef,{id,title,play:true});
     }
   }, {onlyOnce:true});
 }
@@ -129,69 +118,21 @@ function addSong(id, title, thumb){
 window.search = search;
 window.onload = ()=>{ document.getElementById("q").addEventListener("keydown", e=>{ if(e.key==="Enter") search(); }); };
 
-// Lắng nghe queue và hiển thị danh sách
+// Hiển thị hàng chờ
 onValue(queueRef,snapshot=>{
   const val = snapshot.val() || {};
   queueEl.innerHTML="";
-  Object.entries(val).forEach(([key,v],index)=>{
-    if(!v.id) return;
+  Object.entries(val).forEach(([key,v])=>{
     const item = document.createElement("div");
     item.className="song-item";
-    item.innerHTML=`<div>${v.title}</div>`;
-
-    const playNow = document.createElement("button");
-    playNow.textContent="⏩ Ưu tiên";
-    playNow.onclick=()=> {
-      set(commandRef,{id:v.id,title:v.title,play:true,mute:muteState});
-      remove(ref(db,"queue/"+key));
-    };
-
-    const delBtn = document.createElement("button");
-    delBtn.textContent="❌ Xóa";
-    delBtn.onclick=()=> remove(ref(db,"queue/"+key));
-
-    item.appendChild(playNow);
-    item.appendChild(delBtn);
+    item.textContent = v.title;
     queueEl.appendChild(item);
   });
-
-  // Nếu hết bài, chuyển về intro/slide
-  onValue(commandRef, snap=>{
-    const cmd = snap.val();
-    if(cmd && cmd.id===""){ // hết bài
-      // Tự nhảy bài tiếp theo nếu còn
-      const firstKey = Object.keys(val)[0];
-      if(firstKey){
-        const next = val[firstKey];
-        set(commandRef,{id:next.id,title:next.title,play:true,mute:muteState});
-        remove(ref(db,"queue/"+firstKey));
-      }
-    }
-  }, {onlyOnce:true});
 });
 
-// Đồng bộ remote
-onValue(commandRef, snapshot=>{
-  const cmd = snapshot.val();
-  if(!cmd) return;
-  muteBtn.textContent = cmd.mute ? "🔊 Bật âm thanh" : "🔇 Tắt âm thanh";
-  volumeSlider.value = cmd.volume ?? 100;
-});
-
-// Điều khiển âm thanh
-muteBtn.onclick = ()=>{
-  muteState = !muteState;
-  set(commandRef,{mute:muteState});
-};
-
-// Tăng/giảm âm lượng
-volumeSlider.oninput = ()=>{
-  set(commandRef,{volume:Number(volumeSlider.value)});
-};
-
-// Stop bài hát, hiện intro/slide thumbnail
+// Nút dừng
 stopBtn.onclick = ()=>{
-  set(commandRef,{id:"",title:"Intro / Slide",play:false,mute:muteState});
+  set(commandRef,{id:"",title:"Intro / Slide",play:false});
 };
 </script>
 </body>
