--- a/remote.html
+++ b/remote.html
@@ -5,54 +5,43 @@
 <title>Karaoke Remote</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <style>
-body { margin:0; font-family:sans-serif; background:#1a1a1a; color:#fff; display:flex; height:100vh; }
-#left { width:45%; padding:20px; background:#2a2a2a; overflow-y:auto; }
-#right { width:55%; padding:20px; background:#1a1a1a; overflow-y:auto; }
-h2 { margin-bottom:15px; color:#ff3b3f; border-bottom:2px solid #ff3b3f; padding-bottom:5px; }
-input { width:70%; padding:10px; border:none; border-radius:5px 0 0 5px; font-size:16px; outline:none; }
-button { padding:10px; border:none; background:#ff3b3f; color:white; border-radius:0 5px 5px 0; cursor:pointer; margin-left:5px; transition:0.2s; }
+body { margin:0; font-family:sans-serif; background:#1a1a1a; color:#fff; display:flex; height:100vh; justify-content:center; align-items:center; }
+.container { width:90%; max-width:800px; background:#222; padding:20px; border-radius:10px; box-shadow:0 0 10px #000; }
+h2 { margin-bottom:15px; color:#ff3b3f; border-bottom:2px solid #ff3b3f; padding-bottom:5px; text-align:center; }
+.search-bar { display:flex; gap:5px; margin-bottom:10px; }
+input { flex:1; padding:10px; border:none; border-radius:5px; font-size:16px; outline:none; }
+button { padding:10px 12px; border:none; background:#ff3b3f; color:white; border-radius:5px; cursor:pointer; transition:0.2s; }
 button:hover { background:#e52a2f; }
+.switch { display:flex; align-items:center; margin-bottom:10px; gap:6px; }
 .item { display:flex; align-items:center; margin-top:10px; background:#333; padding:8px; border-radius:6px; cursor:pointer; transition:0.2s; }
 .item:hover { background:#444; }
-.item img { width:80px; height:60px; object-fit:cover; margin-right:12px; border-radius:6px; }
+.item img { width:100px; height:70px; object-fit:cover; margin-right:12px; border-radius:6px; }
 .title { font-size:0.95em; line-height:1.2em; flex:1; color:#fff; }
-#status { margin-top:10px; color:#aaa; font-size:0.9em; }
-.song-list .song-item { display:flex; align-items:center; justify-content:space-between; background:#333; padding:8px; margin-top:6px; border-radius:6px; transition:0.2s; }
-.song-list .song-item:hover { background:#444; }
-.song-list button { margin-left:4px; padding:6px 8px; font-size:0.85em; background:#ff3b3f; border:none; border-radius:4px; cursor:pointer; transition:0.2s; }
-.song-list button:hover { background:#e52a2f; }
-.switch { display:flex; align-items:center; margin-top:10px; }
-.switch input { margin-right:6px; }
-.control-buttons { display:flex; gap:10px; margin-top:15px; }
-.control-buttons button { flex:1; padding:10px; font-weight:bold; }
+#status { margin-top:10px; color:#aaa; font-size:0.9em; text-align:center; }
 </style>
 </head>
 <body>
+<div class="container">
+  <h2>🎤 Karaoke Gia Đình</h2>
 
-<div id="left">
-  <h2>🎤 Tìm bài</h2>
-  <input id="q" placeholder="Nhập từ khóa..." />
-  <button onclick="search()">Tìm</button>
+  <div class="search-bar">
+    <input id="q" placeholder="Nhập tên bài hát..." />
+    <button onclick="search()">Tìm</button>
+    <button id="stopBtn">⏹️ Dừng</button>
+  </div>
+
   <div class="switch">
     <input type="checkbox" id="karaokeOnly" checked />
     <label for="karaokeOnly">Chỉ Karaoke</label>
   </div>
+
   <div id="status"></div>
   <div id="list"></div>
 </div>
 
-<div id="right">
-  <h2>🎬 Danh sách phát</h2>
-  <div class="song-list" id="queue"></div>
-
-  <div class="control-buttons">
-    <button id="stopBtn">⏹️ Dừng bài / Intro</button>
-  </div>
-</div>
-
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-import { getDatabase, ref, set, push, onValue, remove } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
 const firebaseConfig = { 
   apiKey: "AIzaSyC1JW_dg-YChaizarbS-7UUN3njFomMPvI",
@@ -66,74 +55,55 @@ const firebaseConfig = {
 };
 
 const API_KEY = "AIzaSyALYcXF9pG01RbeCx6DaZADNwNro2NKq4I";
-
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 const commandRef = ref(db,"command");
-const queueRef = ref(db,"queue");
 
 const listEl = document.getElementById("list");
 const statusEl = document.getElementById("status");
-const queueEl = document.getElementById("queue");
 const stopBtn = document.getElementById("stopBtn");
+let muteState = false;
 
-// Tìm bài
+// 🔍 Tìm kiếm bài hát
 async function search(){
   const q = document.getElementById("q").value.trim();
   const karaokeOnly = document.getElementById("karaokeOnly").checked;
   if(!q) return alert("Nhập từ khóa!");
   listEl.innerHTML = "";
-  statusEl.textContent="🔍 Đang tìm kiếm...";
+  statusEl.textContent="🔍 Đang tìm...";
   try{
     const res = await fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${encodeURIComponent(q + (karaokeOnly?" karaoke":""))}&videoEmbeddable=true&key=${API_KEY}`);
     const data = await res.json();
     statusEl.textContent="";
-    if(!data.items || data.items.length===0){ statusEl.textContent="Không tìm thấy"; return; }
-    
+    if(!data.items || data.items.length===0){ statusEl.textContent="❌ Không tìm thấy"; return; }
     data.items.forEach(v=>{
       if(!v.id?.videoId) return;
       const el=document.createElement("div");
       el.className="item";
       el.innerHTML=`<img src="${v.snippet.thumbnails.medium.url}"><div class="title">${v.snippet.title}</div>`;
-      const addBtn=document.createElement("button");
-      addBtn.textContent="🎵 Phát bài";
-      addBtn.onclick=()=> playSong(v.id.videoId, v.snippet.title);
-      el.appendChild(addBtn);
+      el.onclick=()=> playNow(v.id.videoId, v.snippet.title);
       listEl.appendChild(el);
     });
   }catch(e){ console.error(e); statusEl.textContent="⚠️ Lỗi tìm kiếm"; }
 }
 
-function playSong(id, title){
-  // Thêm vào hàng chờ và phát ngay nếu rảnh
-  push(queueRef,{id,title});
-  onValue(commandRef, snapshot=>{
-    const cmd = snapshot.val();
-    if(!cmd || !cmd.id){
-      set(commandRef,{id,title,play:true});
-    }
-  }, {onlyOnce:true});
+// ▶️ Phát ngay bài hát được chọn
+function playNow(id, title){
+  set(commandRef,{id,title,play:true,mute:muteState});
+  statusEl.textContent=`🎵 Đang phát: ${title}`;
 }
 
-window.search = search;
-window.onload = ()=>{ document.getElementById("q").addEventListener("keydown", e=>{ if(e.key==="Enter") search(); }); };
+// ⏹️ Dừng bài, chuyển về intro/slide
+stopBtn.onclick = ()=>{
+  set(commandRef,{id:"",title:"Intro / Slide",play:false,mute:muteState});
+  statusEl.textContent="⏹️ Đã dừng bài hát";
+};
 
-// Hiển thị hàng chờ
-onValue(queueRef,snapshot=>{
-  const val = snapshot.val() || {};
-  queueEl.innerHTML="";
-  Object.entries(val).forEach(([key,v])=>{
-    const item = document.createElement("div");
-    item.className="song-item";
-    item.textContent = v.title;
-    queueEl.appendChild(item);
-  });
+// Gõ Enter để tìm nhanh
+document.getElementById("q").addEventListener("keydown", e=>{
+  if(e.key==="Enter") search();
 });
 
-// Nút dừng
-stopBtn.onclick = ()=>{
-  set(commandRef,{id:"",title:"Intro / Slide",play:false});
-};
 </script>
 </body>
 </html>
