--- a/remote.html
+++ b/remote.html
@@ -5,29 +5,102 @@
 <title>Karaoke Remote</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <style>
-body { margin:0; font-family:sans-serif; background:#1a1a1a; color:#fff; display:flex; height:100vh; }
-#left { width:100%; padding:20px; background:#2a2a2a; overflow-y:auto; }
-h2 { margin-bottom:15px; color:#ff3b3f; border-bottom:2px solid #ff3b3f; padding-bottom:5px; }
-.search-bar { display:flex; }
-input { flex:1; padding:10px; border:none; border-radius:5px 0 0 5px; font-size:16px; outline:none; }
-button { padding:10px 14px; border:none; background:#ff3b3f; color:white; border-radius:0 5px 5px 0; cursor:pointer; transition:0.2s; font-weight:bold; }
-button:hover { background:#e52a2f; }
-.item { display:flex; align-items:center; margin-top:10px; background:#333; padding:8px; border-radius:6px; cursor:pointer; transition:0.2s; }
-.item:hover { background:#444; }
+body { 
+  margin:0; 
+  font-family:sans-serif; 
+  background:#fff; 
+  color:#ff3b3f; 
+  display:flex; 
+  flex-direction:column; 
+  height:100vh; 
+}
+#topBar {
+  display:flex;
+  justify-content:flex-end;
+  align-items:center;
+  gap:15px;
+  padding:10px 20px;
+  border-bottom:2px solid #ff3b3f;
+  font-weight:bold;
+}
+#topBar button {
+  background:#ff3b3f;
+  color:#fff;
+  border:none;
+  padding:6px 12px;
+  cursor:pointer;
+  border-radius:4px;
+  font-weight:bold;
+  transition:0.2s;
+}
+#topBar button:hover { background:#e52a2f; }
+
+#left { 
+  flex:1; 
+  padding:20px; 
+  overflow-y:auto; 
+}
+h2 { 
+  margin-bottom:15px; 
+  color:#ff3b3f; 
+  border-bottom:2px solid #ff3b3f; 
+  padding-bottom:5px; 
+}
+.search-bar { display:flex; margin-bottom:10px; }
+input { 
+  flex:1; 
+  padding:10px; 
+  border:2px solid #ff3b3f; 
+  border-radius:5px 0 0 5px; 
+  font-size:16px; 
+  outline:none; 
+}
+button.searchBtn { 
+  padding:10px 14px; 
+  border:none; 
+  background:#ff3b3f; 
+  color:white; 
+  border-radius:0 5px 5px 0; 
+  cursor:pointer; 
+  font-weight:bold; 
+}
+button.searchBtn:hover { background:#e52a2f; }
+
+.item { 
+  display:flex; 
+  align-items:center; 
+  margin-top:10px; 
+  background:#ffecec; 
+  color:#ff3b3f; 
+  padding:8px; 
+  border-radius:6px; 
+  cursor:pointer; 
+  transition:0.2s; 
+}
+.item:hover { background:#ffd6d6; }
 .item img { width:80px; height:60px; object-fit:cover; margin-right:12px; border-radius:6px; }
-.title { font-size:0.95em; line-height:1.2em; flex:1; color:#fff; }
-#status { margin-top:10px; color:#aaa; font-size:0.9em; }
-.controls { display:flex; gap:10px; margin-top:15px; }
-.controls button { flex:1; border-radius:6px; font-size:15px; }
+.title { font-size:0.95em; line-height:1.2em; flex:1; color:#ff3b3f; }
+
+#status { margin-top:10px; font-size:0.9em; }
+.controls { display:flex; gap:10px; margin-top:15px; flex-wrap:wrap; }
+.controls button { flex:1; border-radius:6px; font-size:15px; border:none; background:#ff3b3f; color:#fff; cursor:pointer; }
+.controls button:hover { background:#e52a2f; }
+#volumeSlider { flex:2; margin-top:10px; }
 </style>
 </head>
 <body>
+
+<div id="topBar">
+  <div id="dateTime"></div>
+  <div>Ver Web: 1.0</div>
+  <button id="refreshBtn">🔄 Refresh</button>
+</div>
 
 <div id="left">
   <h2>🎤 Tìm bài hát</h2>
   <div class="search-bar">
     <input id="q" placeholder="Nhập từ khóa..." />
-    <button id="searchBtn">🔍</button>
+    <button class="searchBtn" id="searchBtn">🔍</button>
     <button id="stopBtn">⏹️ Dừng</button>
   </div>
 
@@ -42,6 +115,8 @@ button:hover { background:#e52a2f; }
   <div class="controls">
     <button id="muteBtn">🔇 Tắt/Bật âm thanh</button>
     <input type="range" min="0" max="100" value="100" id="volumeSlider">
+    <button id="connectBtn">🔗 Kết nối Room</button>
+    <button id="disconnectBtn">❌ Ngắt kết nối</button>
   </div>
 </div>
 
@@ -54,7 +129,7 @@ const firebaseConfig = {
   authDomain: "karaokeweb-d414b.firebaseapp.com",
   databaseURL: "https://karaokeweb-d414b-default-rtdb.asia-southeast1.firebasedatabase.app",
   projectId: "karaokeweb-d414b",
-  storageBucket: "karaokeweb-d414b.firebasestorage.app",
+  storageBucket: "karaokeweb-d414b.appspot.com",
   messagingSenderId: "183555717781",
   appId: "1:183555717781:web:d3920b342c5d27e107f99c",
   measurementId: "G-VZ228HB7GF"
@@ -65,6 +140,7 @@ const API_KEY = "AIzaSyALYcXF9pG01RbeCx6DaZADNwNro2NKq4I";
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 const commandRef = ref(db, "command");
+const connectionRef = ref(db, "connectionStatus");
 
 const qInput = document.getElementById("q");
 const searchBtn = document.getElementById("searchBtn");
@@ -73,7 +149,20 @@ const listEl = document.getElementById("list");
 const statusEl = document.getElementById("status");
 const muteBtn = document.getElementById("muteBtn");
 const volumeSlider = document.getElementById("volumeSlider");
+const connectBtn = document.getElementById("connectBtn");
+const disconnectBtn = document.getElementById("disconnectBtn");
 let muteState = false;
+
+// --- Hiển thị ngày giờ & Refresh ---
+const dateTimeEl = document.getElementById("dateTime");
+const refreshBtn = document.getElementById("refreshBtn");
+function updateDateTime() {
+  const now = new Date();
+  dateTimeEl.textContent = now.toLocaleString();
+}
+setInterval(updateDateTime,1000);
+updateDateTime();
+refreshBtn.onclick = ()=> location.reload();
 
 // --- TÌM KIẾM VIDEO ---
 async function search() {
@@ -91,15 +180,11 @@ async function search() {
       statusEl.textContent = "Không tìm thấy kết quả.";
       return;
     }
-
     data.items.forEach(v => {
       if (!v.id?.videoId) return;
       const el = document.createElement("div");
       el.className = "item";
-      el.innerHTML = `
-        <img src="${v.snippet.thumbnails.medium.url}">
-        <div class="title">${v.snippet.title}</div>
-      `;
+      el.innerHTML = `<img src="${v.snippet.thumbnails.medium.url}"><div class="title">${v.snippet.title}</div>`;
       el.onclick = () => {
         set(commandRef, { id: v.id.videoId, title: v.snippet.title, play: true, mute: muteState });
         statusEl.textContent = "▶️ Đang phát: " + v.snippet.title;
@@ -129,6 +214,35 @@ muteBtn.onclick = () => {
 
 volumeSlider.oninput = () => {
   set(commandRef, { volume: Number(volumeSlider.value) });
+};
+
+// --- Kết nối Room nhập tay ---
+connectBtn.onclick = () => {
+  let room = prompt("Nhập Room ID (6 số) để kết nối:");
+  if(!room || !/^\d{6}$/.test(room)){
+    alert("Phải nhập đúng Room ID 6 số!");
+    return;
+  }
+  localStorage.setItem("roomId", room);
+  set(connectionRef, { connected: true, roomId: room }).then(()=>{
+    alert("✅ Đã kết nối Room: " + room);
+  });
+};
+
+// --- Ngắt kết nối ---
+disconnectBtn.onclick = () => {
+  const room = localStorage.getItem("roomId");
+  if(!room){
+    alert("Chưa có Room nào kết nối!");
+    return;
+  }
+  set(connectionRef, { connected: false, roomId: "" }).then(()=>{
+    localStorage.removeItem("roomId");
+    alert("❌ Đã ngắt kết nối Room: " + room);
+  }).catch(err=>{
+    console.error(err);
+    alert("⚠️ Lỗi khi ngắt kết nối!");
+  });
 };
 
 // --- CẬP NHẬT TRẠNG THÁI TỪ SCREEN ---
