--- a/screen.html
+++ b/screen.html
@@ -88,11 +88,13 @@ function setCommand(id,title){
     titleEl.style.display='none';
     background.style.display='block';
   } else {
-    playerIframe.src = `https://www.youtube.com/embed/${id}?autoplay=1&controls=0&modestbranding=1&rel=0&fs=0&enablejsapi=1`;
+    // Ẩn background ngay khi remote bấm play
     background.style.display='none';
     playerIframe.style.display='block';
     titleEl.style.display='block';
     titleSpan.textContent = title;
+
+    playerIframe.src = `https://www.youtube.com/embed/${id}?autoplay=1&controls=0&modestbranding=1&rel=0&fs=0&enablejsapi=1`;
   }
 }
 
