Add mute button and volume slider to remote.html

--- a/remote.html
+++ b/remote.html
@@ -113,6 +113,8 @@ button.searchBtn:hover { background:#e52a2f; }
   <div id="list"></div>
 
   <div class="controls">
+    <button id="muteBtn">🔇 Tắt/Bật âm thanh</button>
+    <input type="range" min="0" max="100" value="100" id="volumeSlider">
     <button id="connectBtn">🔗 Kết nối Room</button>
     <button id="disconnectBtn">❌ Ngắt kết nối</button>
   </div>
